@@ -1,15 +1,12 @@
 package com.jetbrains.youtrackdb.internal.core.gremlin;
 
-import com.jetbrains.youtrackdb.api.DatabaseSession;
 import com.jetbrains.youtrackdb.api.DatabaseType;
 import com.jetbrains.youtrackdb.api.YouTrackDB;
-import com.jetbrains.youtrackdb.api.YouTrackDB.ConfigurationParameters;
-import com.jetbrains.youtrackdb.api.config.YouTrackDBConfig;
 import com.jetbrains.youtrackdb.internal.common.log.LogManager;
+import com.jetbrains.youtrackdb.internal.core.config.YouTrackDBConfig;
 import com.jetbrains.youtrackdb.internal.core.db.YouTrackDBImpl;
 import com.jetbrains.youtrackdb.internal.core.db.YouTrackDBInternal;
 import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.HashMap;
@@ -24,9 +21,30 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class YTDBGraphFactory {
-
   private static final Logger logger = LoggerFactory.getLogger(YTDBGraphFactory.class);
 
+  /// Path to the root folder that contains all embedded databases managed by [YouTrackDB], this
+  /// parameter is used only in [org.apache.tinkerpop.gremlin.structure.util.GraphFactory]
+  public static final String CONFIG_DB_PATH = "youtrackdb.embedded.path";
+  /// Name of the embedded database to open, this parameter is used only in
+  /// [org.apache.tinkerpop.gremlin.structure.util.GraphFactory].
+  public static final String CONFIG_DB_NAME = "youtrackdb.database.name";
+  /// Type of the embedded database to open, this parameter is used only in
+  /// [org.apache.tinkerpop.gremlin.structure.util.GraphFactory]
+  public static final String CONFIG_DB_TYPE = "youtrackdb.database.type";
+  /// Current username, this parameter is used only in
+  /// [org.apache.tinkerpop.gremlin.structure.util.GraphFactory] to open the graph instance.
+  public static final String CONFIG_USER_NAME = "youtrackdb.user.name";
+  /// User role that will be created during database creation, this parameter is used only in
+  /// [org.apache.tinkerpop.gremlin.structure.util.GraphFactory].
+  public static final String CONFIG_USER_ROLE = "youtrackdb.user.role";
+  /// Current user password, this parameter is used only in
+  /// [org.apache.tinkerpop.gremlin.structure.util.GraphFactory].
+  public static final String CONFIG_USER_PWD = "youtrackdb.user.pwd";
+  /// This parameter indicates if a database should be created during the opening of the graph
+  /// instance. This parameter is used only in
+  /// [org.apache.tinkerpop.gremlin.structure.util.GraphFactory] to open the [YTDBGraph] instance.
+  public static final String CONFIG_CREATE_IF_NOT_EXISTS = "youtrackdb.database.createIfNotExists";
   private static final ConcurrentHashMap<Path, YouTrackDBImpl> storagePathYTDBMap = new ConcurrentHashMap<>();
 
   /// This method is used in [org.apache.tinkerpop.gremlin.structure.util.GraphFactory] to open a
@@ -34,58 +52,63 @@ public class YTDBGraphFactory {
   @SuppressWarnings("unused")
   public static Graph open(Configuration configuration) {
     try {
-      var dbName = configuration.getString(ConfigurationParameters.CONFIG_DB_NAME);
+      var dbName = configuration.getString(CONFIG_DB_NAME);
       if (dbName == null) {
         throw new IllegalArgumentException(
-            "YouTrackDB graph name is not specified : " + ConfigurationParameters.CONFIG_DB_NAME);
+            "YouTrackDB graph name is not specified : "
+                + CONFIG_DB_NAME);
       }
-      var user = configuration.getString(ConfigurationParameters.CONFIG_USER_NAME);
+      var user = configuration.getString(CONFIG_USER_NAME);
       if (user == null) {
         throw new IllegalArgumentException(
-            "YouTrackDB user is not specified : " + ConfigurationParameters.CONFIG_USER_NAME);
+            "YouTrackDB user is not specified : "
+                + CONFIG_USER_NAME);
       }
-      var password = configuration.getString(ConfigurationParameters.CONFIG_USER_PWD);
+      var password = configuration.getString(CONFIG_USER_PWD);
       if (password == null) {
         throw new IllegalArgumentException(
-            "YouTrackDB password is not specified : " + ConfigurationParameters.CONFIG_USER_PWD);
+            "YouTrackDB password is not specified : "
+                + CONFIG_USER_PWD);
       }
 
       YouTrackDB youTrackDB;
       boolean shouldCloseYouTrackDB;
       String dbPath;
 
-      dbPath = configuration.getString(ConfigurationParameters.CONFIG_DB_PATH);
+      dbPath = configuration.getString(CONFIG_DB_PATH);
       if (dbPath == null) {
         throw new IllegalArgumentException(
-            "YouTrackDB path is not specified : " + ConfigurationParameters.CONFIG_DB_PATH);
+            "YouTrackDB path is not specified : " + CONFIG_DB_PATH);
       }
 
       var createIfNotExists = configuration.getBoolean(
-          ConfigurationParameters.CONFIG_CREATE_IF_NOT_EXISTS,
+          CONFIG_CREATE_IF_NOT_EXISTS,
           false);
       var currentYouTrackDB = ytdbInstance(dbPath, configuration);
 
       if (createIfNotExists && !currentYouTrackDB.exists(dbName)) {
-        var dbTypeStr = configuration.getString(ConfigurationParameters.CONFIG_DB_TYPE);
+        var dbTypeStr = configuration.getString(CONFIG_DB_TYPE);
         if (dbTypeStr == null) {
           throw new IllegalArgumentException(
-              "YouTrackDB type is not specified : " + ConfigurationParameters.CONFIG_DB_TYPE);
+              "YouTrackDB type is not specified : "
+                  + CONFIG_DB_TYPE);
         }
         var dbType = DatabaseType.valueOf(dbTypeStr.toUpperCase(Locale.ROOT));
 
-        var userRole = configuration.getString(ConfigurationParameters.CONFIG_USER_ROLE);
+        var userRole = configuration.getString(CONFIG_USER_ROLE);
         if (userRole == null) {
           throw new IllegalArgumentException(
               "YouTrackDB user role is not specified : "
-                  + ConfigurationParameters.CONFIG_USER_ROLE);
+                  + CONFIG_USER_ROLE);
         }
 
         currentYouTrackDB.createIfNotExists(dbName, dbType, user, password, userRole);
       }
 
-      return currentYouTrackDB.openGraph(dbName, user, password, configuration);
+      var ytdbConfig = YouTrackDBConfig.builder().fromApacheConfiguration(configuration).build();
+      return currentYouTrackDB.cachedPool(dbName, user, password, ytdbConfig).asGraph();
     } finally {
-      configuration.clearProperty(ConfigurationParameters.CONFIG_USER_PWD);
+      configuration.clearProperty(CONFIG_USER_PWD);
     }
   }
 
@@ -95,16 +118,8 @@ public class YTDBGraphFactory {
   }
 
   public static YouTrackDBImpl ytdbInstance(
-      String dbPath, Supplier<YouTrackDBInternal<DatabaseSession>> internalSupplier) {
-    var path = Paths.get(dbPath);
-    try {
-      Files.createDirectories(path);
-      path = path.toRealPath();
-    } catch (IOException e) {
-      logger.error("Can not retrieve real path for {}", dbPath, e);
-      path = path.toAbsolutePath().normalize();
-    }
-
+      String dbPath, Supplier<YouTrackDBInternal> internalSupplier) {
+    var path = Path.of(dbPath).toAbsolutePath().normalize();
     return storagePathYTDBMap.compute(path, (p, youTrackDB) -> {
       if (youTrackDB != null && youTrackDB.isOpen()) {
         return youTrackDB;
